--- a/.github/workflows/deployment-with-restart.yml
+++ b/.github/workflows/deployment-with-restart.yml
@@ -167,20 +167,28 @@ jobs:
           device_id=$(edge-info-search --query vpn_ip=="${{ matrix.vpn_ips }}" -c device_id)
           slackboy -m "$device_id의 작업이 모두 끝났습니다" -c ${{ inputs.slack-channel }} --reply-ts ${{ needs.Inform-slack-of-start.outputs.thread_ts }}
 
+
   Complete-device-summary:
     name: process complete summary
     if: ${{ always() }}
     needs: [ Deployment-to-each-device ]
     runs-on: self-hosted
     steps:
+      - name: Checkout the action repository
+        uses: actions/checkout@v2
+        with:
+          repository: teamdable/vv-deploy-actions-test
+          path: action/
+
       - name: success devices
         run: |
-          if [[ -n $file_path ]] 
+          if [[ -e $file_path ]] 
           then 
             complete_string=$(cat $file_path)
             echo "complete_string : $complete_string"
             complete_string=$(echo $complete_string | tr ' ' ',')
             echo "refined string : $complete_string"
+            echo "current list : $(ls -al)"
             complete_devices=$(action/get-device-id --vpn-ip $complete_string)
             rm -rf $file_path
           else
